# Olio-ohjelmat-kevat-2025

./: README.md
notifikaattori/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
olio_vk4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
oliovk6/: CMakeLists.txt  main.cpp  student.cpp  student.h
oliovk7tehtava/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
oliovk8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
vk2olioteht/: CMakeLists.txt  game.cpp  game.h  main.cpp
vk3OlioKotitehtava/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
